--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://renatopedrosal.github.io/aashishbasyal-dev/",
+  "homepage": "https://github.com/ashimbasyal/portfolio",
   "name": "aashishbasyal-dev",
   "private": true,
   "version": "0.0.0",
